document.forms can get confused and insert the same form multiple times in the list.  Bug 166752, r=caillon/jkeiser, sr=jst, a=asa